--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-minimal
-title: Oct 19-23 2020 hosted virtually by the Royal Institute of Technology (KTH), Stockholm, Sweden
+title: 2020 Joint Conference on AI Music Creativity 
+description: Oct 19-23 2020 hosted virtually by the Royal Institute of Technology (KTH), Stockholm, Sweden
