--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: 2020 Joint Conference on AI Music Creativity 
-logo: https://github.com/boblsturm/aimusic2020/blob/master/logo_aimusic2020.png
+logo: logo_aimusic2020.png
