--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: 2020 Joint Conference on AI Music Creativity 
+title: The 2020 Joint Conference on AI Music Creativity 
 logo: logo_aimusic2020.png
