--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-theme: jekyll-theme-minimal
-title: 
-logo: logo_aimusic2020.png
+theme: jekyll-theme-leap-day
+title: The 2020 Joint Conference on AI Music Creativity
